# bevy-toon-material

./: Cargo.toml  README.md
assets/shaders/: toon_material.wgsl
examples/: point_light_demo.rs
src/: lib.rs  main.rs
